samples/ut/access/FailPrivate02.err
FailPrivate02.z2(7, 16): error: can't access non public constructor:
	Foo()
