samples/ut/access/FailPrivate02.z2
using org.z2legacy.samples.ut.access.Foo;

namespace org.z2legacy.samples.ut.access;

class FailPrivate02 {
	def @main() {
		val p: Foo;
	}
}